@@ -1,5 +1,8 @@
 2008-04-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* qt4/main_window.cpp:
+	- added an automatic directry setting to open the output file.
+
 	* qt4/main_data.cpp:
 	- implemented automatic file exteantion appending for an output
 	file name.
